--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
@@ -59,7 +59,7 @@ $enterprise = $block->getEnterpriseProduct();
                 </div>
             </div>
             <div class="col hero-img">
-                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/saas-thumbnail.jpg'); ?>" alt="" class="featured-img">
+                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/xpipe/cloud_development.png'); ?>" alt="" class="featured-img">
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@ $enterprise = $block->getEnterpriseProduct();
     <div class="container">
         <div class="row">
             <div class="col saas-img-wrap">
-                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/saas-project.jpg'); ?>" alt="" class="saas-screen">
+                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/xpipe/template_store.png'); ?>" alt="" class="saas-screen">
             </div>
             <div class="col">
                 <h2 class="heading">
@@ -141,7 +141,7 @@ $enterprise = $block->getEnterpriseProduct();
                 </div>
             </div>
             <div class="col saas-img-wrap">
-                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/saas-process.png'); ?>" alt="" class="saas-screen">
+                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/xpipe/deploy_minecraft_kubernetes.png'); ?>" alt="" class="saas-screen">
             </div>
         </div>
     </div>
@@ -154,7 +154,7 @@ $enterprise = $block->getEnterpriseProduct();
     <div class="container">
         <div class="row">
             <div class="col saas-img-wrap">
-                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/saas-automation.png'); ?>" alt="" class="saas-screen">
+                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/xpipe/java.png'); ?>" alt="" class="saas-screen">
             </div>
             <div class="col">
                 <h2 class="heading">
@@ -223,7 +223,7 @@ $enterprise = $block->getEnterpriseProduct();
                 </div>
             </div>
             <div class="col saas-img-wrap">
-                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/saas-integration.png'); ?>" alt="" class="saas-screen">
+                <img src="<?php echo $this->getViewFileUrl('Pipe_LandingPage::images/xpipe/php.png'); ?>" alt="" class="saas-screen">
             </div>
         </div>
     </div>
@@ -378,7 +378,7 @@ $enterprise = $block->getEnterpriseProduct();
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 30 users, after &euro; 5 <em>/year (per user)</em>
+                    &nbsp; Up to 30 users, after &euro; 50 <em>/year (per user)</em>
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
@@ -403,7 +403,7 @@ $enterprise = $block->getEnterpriseProduct();
 
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Dedicated Pipelines Templates
+                    &nbsp; Dedicated Pipelines
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
@@ -510,7 +510,7 @@ $enterprise = $block->getEnterpriseProduct();
                     <?= __("How does the pricing work?") ?>
                 </h3>
                 <p class="para-line answer">
-                    <?= __("Plans are billed yearly to keep billing simple and reserve capacity in our shared clusters. Pro includes up to 30 users; extra seats are €5/user/year.Enterprise is negotiated per project (we map required resources and SLA, then give you a flat annual fee).") ?>
+                    <?= __("Plans are billed yearly to keep billing simple and reserve capacity in our shared clusters. Pro includes up to 30 users; extra seats are €50/user/year.Enterprise is negotiated per project (we map required resources and SLA, then give you a flat annual fee).") ?>
                 </p>
                 <hr>
             </div>
@@ -531,7 +531,7 @@ $enterprise = $block->getEnterpriseProduct();
                     <?= __("What happens if I hit my pipeline or user limit?") ?>
                 </h3>
                 <p class="para-line answer">
-                    <?= __("XPipe will queue additional pipelines instead of rejecting them. You can upgrade at any time: add extra users (€5/user/year on Pro) request a higher concurrent pipeline quota (Enterprise).") ?>
+                    <?= __("XPipe will queue additional pipelines instead of rejecting them. You can upgrade at any time: add extra users (€50/user/year on Pro) request a higher concurrent pipeline quota (Enterprise).") ?>
                 </p>
                 <hr>
             </div>
