--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LanguageSelector/view/frontend/layout/default.xml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LanguageSelector/view/frontend/layout/default.xml
@@ -9,5 +9,11 @@
 <!--        <referenceContainer name="header.panel">-->
 <!--            <block class="Magento\Framework\View\Element\Template" name="language.selector" template="Pipe_LanguageSelector::language_selector.phtml" before="-"/>-->
 <!--        </referenceContainer>-->
+
+<!--                <referenceContainer name="after.body.start">-->
+<!--                    <block class="Magento\Framework\View\Element\Template"-->
+<!--                           name="pipe.language.selector"-->
+<!--                           template="Pipe_LanguageSelector::selector.phtml"/>-->
+<!--                </referenceContainer>-->
     </body>
 </page>
