--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/layout/pipedashboard_beta_index.xml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/layout/pipedashboard_beta_index.xml
@@ -5,8 +5,8 @@
     <body>
         <referenceContainer name="content">
             <block class="Pipe\Dashboard\Block\Adminhtml\Dashboard"
-                   name="pipedashboard.individual"
-                   template="Pipe_Dashboard::individual.phtml"/>
+                   name="pipedashboard.beta"
+                   template="Pipe_Dashboard::beta.phtml"/>
         </referenceContainer>
     </body>
 </page>
