--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/demo.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/demo.phtml
@@ -26,7 +26,7 @@ $block->consumeErrorMessages();
 
 <!-- 1:1 aspect ratio -->
 <div class="embed-responsive embed-responsive-21by9">
-    <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardDemo ?>"></iframe>
+    <iframe class="embed-responsive-item" frameborder="0" src="<?= $block->getDemoDashboard() ?>"></iframe>
 </div>
 
 
