Core: added login screen css customization

--- a/Core/V1/Module/LoginBackground/view/adminhtml/layout/adminhtml_auth_login.xml
+++ b/Core/V1/Module/LoginBackground/view/adminhtml/layout/adminhtml_auth_login.xml
@@ -5,5 +5,6 @@
     <head>
         <!-- Load our CSS ONLY on the admin login page -->
         <css src="Core_LoginBackground::css/login-background.css" />
+        <css src="Core_LoginBackground::css/login-screen.css" />
     </head>
 </page>
