--- a/Pipelines/V1/Module/Dedicated/view/adminhtml/templates/logs.phtml
+++ b/Pipelines/V1/Module/Dedicated/view/adminhtml/templates/logs.phtml
@@ -20,15 +20,15 @@ $logs = $block->getLogs();
 
 <div id="devops-log-viewer" class="dlv">
     <!---- TIMELINE –-->
-    <aside class="dlv-timeline">
-        <header><?= __('Pipeline') ?></header>
-        <ol>
-            <li class="done"><span></span>Build Certs <small>50 s</small></li>
-            <li class="done"><span></span>Get Certs <small>21 s</small></li>
-            <li class="done"><span></span>Build &amp; Push <small>2 m 10 s</small></li>
-            <li class="active"><span></span>Test Ingress <small>running…</small></li>
-        </ol>
-    </aside>
+<!--    <aside class="dlv-timeline">-->
+<!--        <header>--><?php //= __('Pipeline') ?><!--</header>-->
+<!--        <ol>-->
+<!--            <li class="done"><span></span>Build Certs <small>50 s</small></li>-->
+<!--            <li class="done"><span></span>Get Certs <small>21 s</small></li>-->
+<!--            <li class="done"><span></span>Build &amp; Push <small>2 m 10 s</small></li>-->
+<!--            <li class="active"><span></span>Test Ingress <small>running…</small></li>-->
+<!--        </ol>-->
+<!--    </aside>-->
 
     <!---- LOG PANE –-->
     <section class="dlv-log">
