--- a/Pipelines/V1/Module/Dedicated/view/adminhtml/web/css/log-viewer.css
+++ b/Pipelines/V1/Module/Dedicated/view/adminhtml/web/css/log-viewer.css
@@ -1,5 +1,5 @@
 /* root container */
-.dlv{display:flex;min-height:600px;border:1px solid #dcdfe6;font-family:Menlo,Consolas,monospace}
+.dlv{display:block;min-height:600px;border:1px solid #dcdfe6;font-family:Menlo,Consolas,monospace}
 
 /* timeline */
 .dlv-timeline{width:240px;background:#f5f7fa;border-right:1px solid #dcdfe6}
